# Trab2-Redes

./: .env.example  README.md  messages.txt  pyproject.toml
src/client/: client.py
src/message_server/: message_server.py
src/server/: server.py
src/server/message_server/: message_server.py
src/server/priority_queue/: priority_queue.py
